@@ -46,6 +46,15 @@ Stop-The-World
 
 
 
+
+串行收集器：
+DefNew：是使用-XX:+UseSerialGC（新生代，老年代都使用串行回收收集器）。
+并行收集器：
+ParNew：是使用-XX:+UseParNewGC（新生代使用并行收集器，老年代使用串行回收收集器）或者-XX:+UseConcMarkSweepGC(新生代使用并行收集器，老年代使用CMS)。
+PSYoungGen：是使用-XX:+UseParallelOldGC（新生代，老年代都使用并行回收收集器）或者-XX:+UseParallelGC（新生代使用并行回收收集器，老年代使用串行收集器）
+garbage-first heap：是使用-XX:+UseG1GC（G1收集器）
+
+
 *
 * */
 public class TestGarbage {
